Content and spacing fixes, feedback.

--- a/src/styles/components/Container.scss
+++ b/src/styles/components/Container.scss
@@ -15,10 +15,10 @@ $Container--popover-arrowWidth: $Container--popover-arrowFullWidth/2;
 
 .Container--popover {
   border-radius: #{8/$font-size}rem;
-  border: #{1.1/$font-size}rem solid $base-border-color;
+  border: $thin-border-size solid $base-border-color;
   box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .1);
   background: $base-color;
-  max-height: 450px;
+  max-height: #{450/$font-size}rem;
 
   &:after, &:before {
     top: 100%;
@@ -78,7 +78,7 @@ $Container--popover-arrowWidth: $Container--popover-arrowFullWidth/2;
 .Container-bar {
   position: absolute;
   height: #{44/$font-size}rem;
-  background: #F5F5F5;
+  background: $form-cta-color;
   right: 0;
   left: 0;
   top: 0;
