--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -119,6 +119,10 @@ $Base-posOffset: #{20/$font-size}rem;
   }
 }
 
+.u-paddingRS {
+  padding-right: #{10/$font-size}rem;
+}
+
 .u-paddingTM {
   padding-top: #{20/$font-size}rem;
 }
